exporting clean data csv + notebook

--- a/code/Cleaning/cleaning_gamesales.ipynb
+++ b/code/Cleaning/cleaning_gamesales.ipynb
@@ -3,8 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled4.ipynb",
-      "provenance": []
+      "name": "cleaning_gamesales.ipynb",
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -27,11 +28,11 @@
       "metadata": {
         "id": "Grztwd7wRAzZ",
         "colab_type": "code",
+        "outputId": "81c8849a-0970-471b-df75-9809c9cd2902",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "df66dcb4-da64-4f19-bee6-fc47fcfb8937"
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -40,7 +41,7 @@
         "import nltk\n",
         "nltk.download('stopwords')\n"
       ],
-      "execution_count": 73,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -60,7 +61,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 73
+          "execution_count": 44
         }
       ]
     },
@@ -69,17 +70,17 @@
       "metadata": {
         "id": "ir9jSMGJRfes",
         "colab_type": "code",
+        "outputId": "eb5b4620-0086-4c77-ac88-4764e7544382",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "0fa20360-2bea-445d-9803-2b3f53af8c07"
+          "height": 292
+        }
       },
       "source": [
         "df = pd.read_csv('https://raw.githubusercontent.com/yassinhediger/Bigscale-Videogames/master/data/rawdata/videogamesales.csv')\n",
         "df.head()"
       ],
-      "execution_count": 75,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +206,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 75
+          "execution_count": 45
         }
       ]
     },
@@ -224,17 +225,17 @@
       "metadata": {
         "id": "8G99hfrPVW0v",
         "colab_type": "code",
+        "outputId": "ac8789a8-3c99-41ec-8045-e434472a5261",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 292
-        },
-        "outputId": "d58ce621-84a7-43e4-fc8b-816d86426a41"
+        }
       },
       "source": [
         "df = df.rename(columns={\"Rank\": \"game_global_ranking\", \"Name\": \"game_title\", \"Platform\": \"console\",\"Genre\": \"genre\", \"Year\": \"year_of_release\", \"Publisher\": \"publisher\", \"NA_Sales\": \"northamerican_sales\", \"EU_Sales\": \"europe_sales\", \"JP_Sales\": \"japan_sales\", \"Other_Sales\":\"othercontry_sales\", \"Global_Sales;\": \"world_sales\"})\n",
         "df.head()"
       ],
-      "execution_count": 78,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,7 +361,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 78
+          "execution_count": 46
         }
       ]
     },
@@ -379,27 +380,35 @@
       "metadata": {
         "id": "yItWHvi9TVlr",
         "colab_type": "code",
+        "outputId": "c16fba81-be49-4b0a-f3c7-0f4f429cf035",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 558
-        },
-        "outputId": "37c6f2eb-39c9-4ca5-dc16-13b133b5d6e2"
+          "height": 643
+        }
       },
       "source": [
+        "#Droping empty values\n",
+        "df.replace('', np.nan, inplace=True)\n",
+        "df.dropna(inplace=True)\n",
+        "\n",
         "#Lower all the letters from Name column\n",
         "df[\"game_title\"] = df[\"game_title\"].str.lower()\n",
         "df[\"console\"] = df[\"console\"].str.lower()\n",
         "df[\"genre\"] = df[\"genre\"].str.lower()\n",
         "df[\"publisher\"] = df[\"publisher\"].str.lower()\n",
         "#Removing White space\n",
-        "df[\"game_title\"]= df[\"game_title\"].str.replace(\" \", \"\") \n",
+        "df[\"game_title_normalized\"]= df[\"game_title\"].str.replace(\" \", \"\") \n",
         "#Removing special character\n",
         "spec_chars = [\"!\",'\"',\"#\",\"%\",\"&\",\"'\",\"(\",\")\",\n",
         "              \"*\",\"+\",\",\",\"-\",\".\",\"/\",\":\",\";\",\"<\",\n",
         "              \"=\",\">\",\"?\",\"@\",\"[\",\"\\\\\",\"]\",\"^\",\"_\",\n",
-        "              \"`\",\"{\",\"|\",\"}\",\"~\",\"–\"]\n",
+        "              \"`\",\"{\",\"|\",\"}\",\"~\",\"–\",\".\"]\n",
         "for char in spec_chars:\n",
-        "    df['game_title'] = df['game_title'].str.replace(char, ' ')\n",
+        "    df['game_title_normalized'] = df['game_title_normalized'].str.replace(char, ' ')\n",
+        "df['world_sales'] = df['world_sales'].str.replace(';', ' ')\n",
+        "\n",
+        "#Formating in real date the column \"year_of_release\"\n",
+        "df[\"year_of_release\"]= df[\"year_of_release\"].astype(int, errors='raise')\n",
         "\n",
         "df.head()\n",
         "\n",
@@ -409,7 +418,7 @@
         "\n",
         "df.head(100)"
       ],
-      "execution_count": 79,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -444,81 +453,88 @@
               "      <th>japan_sales</th>\n",
               "      <th>othercontry_sales</th>\n",
               "      <th>world_sales</th>\n",
+              "      <th>game_title_normalized</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>1</td>\n",
-              "      <td>wiisports</td>\n",
+              "      <td>wii sports</td>\n",
               "      <td>wii</td>\n",
-              "      <td>2006.0</td>\n",
+              "      <td>2006</td>\n",
               "      <td>sports</td>\n",
               "      <td>nintendo</td>\n",
               "      <td>41.49</td>\n",
               "      <td>29.02</td>\n",
               "      <td>3.77</td>\n",
               "      <td>8.46</td>\n",
-              "      <td>82.74;</td>\n",
+              "      <td>82.74</td>\n",
+              "      <td>wiisports</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>2</td>\n",
-              "      <td>supermariobros</td>\n",
+              "      <td>super mario bros.</td>\n",
               "      <td>nes</td>\n",
-              "      <td>1985.0</td>\n",
+              "      <td>1985</td>\n",
               "      <td>platform</td>\n",
               "      <td>nintendo</td>\n",
               "      <td>29.08</td>\n",
               "      <td>3.58</td>\n",
               "      <td>6.81</td>\n",
               "      <td>0.77</td>\n",
-              "      <td>40.24;</td>\n",
+              "      <td>40.24</td>\n",
+              "      <td>supermariobros</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>3</td>\n",
-              "      <td>mariokartwii</td>\n",
+              "      <td>mario kart wii</td>\n",
               "      <td>wii</td>\n",
-              "      <td>2008.0</td>\n",
+              "      <td>2008</td>\n",
               "      <td>racing</td>\n",
               "      <td>nintendo</td>\n",
               "      <td>15.85</td>\n",
               "      <td>12.88</td>\n",
               "      <td>3.79</td>\n",
               "      <td>3.31</td>\n",
-              "      <td>35.82;</td>\n",
+              "      <td>35.82</td>\n",
+              "      <td>mariokartwii</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>4</td>\n",
-              "      <td>wiisportsresort</td>\n",
+              "      <td>wii sports resort</td>\n",
               "      <td>wii</td>\n",
-              "      <td>2009.0</td>\n",
+              "      <td>2009</td>\n",
               "      <td>sports</td>\n",
               "      <td>nintendo</td>\n",
               "      <td>15.75</td>\n",
               "      <td>11.01</td>\n",
               "      <td>3.28</td>\n",
               "      <td>2.96</td>\n",
-              "      <td>33;</td>\n",
+              "      <td>33</td>\n",
+              "      <td>wiisportsresort</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>5</td>\n",
-              "      <td>pokemonred pokemonblue</td>\n",
+              "      <td>pokemon red/pokemon blue</td>\n",
               "      <td>gb</td>\n",
-              "      <td>1996.0</td>\n",
+              "      <td>1996</td>\n",
               "      <td>role-playing</td>\n",
               "      <td>nintendo</td>\n",
               "      <td>11.27</td>\n",
               "      <td>8.89</td>\n",
               "      <td>10.22</td>\n",
               "      <td>1.00</td>\n",
-              "      <td>31.37;</td>\n",
+              "      <td>31.37</td>\n",
+              "      <td>pokemonred pokemonblue</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
+              "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
@@ -534,101 +550,129 @@
               "    <tr>\n",
               "      <th>95</th>\n",
               "      <td>96</td>\n",
-              "      <td>crashbandicoot2 cortexstrikesback</td>\n",
+              "      <td>crash bandicoot 2: cortex strikes back</td>\n",
               "      <td>ps</td>\n",
-              "      <td>1997.0</td>\n",
+              "      <td>1997</td>\n",
               "      <td>platform</td>\n",
               "      <td>sony computer entertainment</td>\n",
               "      <td>3.78</td>\n",
               "      <td>2.17</td>\n",
               "      <td>1.31</td>\n",
               "      <td>0.31</td>\n",
-              "      <td>7.58;</td>\n",
+              "      <td>7.58</td>\n",
+              "      <td>crashbandicoot2 cortexstrikesback</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>96</th>\n",
               "      <td>97</td>\n",
-              "      <td>supermariobros 2</td>\n",
+              "      <td>super mario bros. 2</td>\n",
               "      <td>nes</td>\n",
-              "      <td>1988.0</td>\n",
+              "      <td>1988</td>\n",
               "      <td>platform</td>\n",
               "      <td>nintendo</td>\n",
               "      <td>5.39</td>\n",
               "      <td>1.18</td>\n",
               "      <td>0.70</td>\n",
               "      <td>0.19</td>\n",
-              "      <td>7.46;</td>\n",
+              "      <td>7.46</td>\n",
+              "      <td>supermariobros 2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>97</th>\n",
               "      <td>98</td>\n",
-              "      <td>supersmashbros forwiiuand3ds</td>\n",
+              "      <td>super smash bros. for wii u and 3ds</td>\n",
               "      <td>3ds</td>\n",
-              "      <td>2014.0</td>\n",
+              "      <td>2014</td>\n",
               "      <td>fighting</td>\n",
               "      <td>nintendo</td>\n",
               "      <td>3.24</td>\n",
               "      <td>1.35</td>\n",
               "      <td>2.42</td>\n",
               "      <td>0.43</td>\n",
-              "      <td>7.45;</td>\n",
+              "      <td>7.45</td>\n",
+              "      <td>supersmashbros forwiiuand3ds</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>98</th>\n",
               "      <td>99</td>\n",
-              "      <td>callofduty worldatwar</td>\n",
+              "      <td>call of duty: world at war</td>\n",
               "      <td>x360</td>\n",
-              "      <td>2008.0</td>\n",
+              "      <td>2008</td>\n",
               "      <td>shooter</td>\n",
               "      <td>activision</td>\n",
               "      <td>4.79</td>\n",
               "      <td>1.90</td>\n",
               "      <td>0.00</td>\n",
               "      <td>0.69</td>\n",
-              "      <td>7.37;</td>\n",
+              "      <td>7.37</td>\n",
+              "      <td>callofduty worldatwar</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>99</th>\n",
               "      <td>100</td>\n",
-              "      <td>battlefield3</td>\n",
+              "      <td>battlefield 3</td>\n",
               "      <td>x360</td>\n",
-              "      <td>2011.0</td>\n",
+              "      <td>2011</td>\n",
               "      <td>shooter</td>\n",
               "      <td>electronic arts</td>\n",
               "      <td>4.46</td>\n",
               "      <td>2.13</td>\n",
               "      <td>0.06</td>\n",
               "      <td>0.69</td>\n",
-              "      <td>7.34;</td>\n",
+              "      <td>7.34</td>\n",
+              "      <td>battlefield3</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>100 rows × 11 columns</p>\n",
+              "<p>100 rows × 12 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "   game_global_ranking  ... world_sales\n",
-              "0                    1  ...      82.74;\n",
-              "1                    2  ...      40.24;\n",
-              "2                    3  ...      35.82;\n",
-              "3                    4  ...         33;\n",
-              "4                    5  ...      31.37;\n",
-              "..                 ...  ...         ...\n",
-              "95                  96  ...       7.58;\n",
-              "96                  97  ...       7.46;\n",
-              "97                  98  ...       7.45;\n",
-              "98                  99  ...       7.37;\n",
-              "99                 100  ...       7.34;\n",
+              "   game_global_ranking  ...              game_title_normalized\n",
+              "0                    1  ...                          wiisports\n",
+              "1                    2  ...                    supermariobros \n",
+              "2                    3  ...                       mariokartwii\n",
+              "3                    4  ...                    wiisportsresort\n",
+              "4                    5  ...             pokemonred pokemonblue\n",
+              "..                 ...  ...                                ...\n",
+              "95                  96  ...  crashbandicoot2 cortexstrikesback\n",
+              "96                  97  ...                   supermariobros 2\n",
+              "97                  98  ...       supersmashbros forwiiuand3ds\n",
+              "98                  99  ...              callofduty worldatwar\n",
+              "99                 100  ...                       battlefield3\n",
               "\n",
-              "[100 rows x 11 columns]"
+              "[100 rows x 12 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 79
+          "execution_count": 47
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ietui2kkrDIR",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Exportation of the clean csv"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JpXFtYj6rIQj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df.to_csv(r'cleandata.csv')\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
